# MediaSonic

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in  create_icons.cpp  create_icons.py  create_icons.sh
.cache/clangd/index/: aboutInfo.cpp.21A9CBE664EAF182.idx  aboutInfo.h.33FF787A5659E77F.idx  application.cpp.3C43A34B465068C3.idx  application.h.54762B873ECFCD35.idx  flow.cpp.7BC509DC88D7EA8C.idx  flow.h.0E43DCA869720098.idx  lcddisplay.cpp.D925EA09C25884C3.idx  lcddisplay.h.F17FEEDF639CC86E.idx  main.cpp.62CE987A9A8218C0.idx  mainwindow.cpp.026C012E2F60411F.idx  mainwindow.h.E13C2DA2B982E9F1.idx  mediaplayer.cpp.96B775F65034430B.idx  mediaplayer.h.A0D2431CBD33A4F2.idx  sidebar.cpp.45171A6157BB9FE8.idx  sidebar.h.31E176E35D88AA8D.idx  topbar.cpp.10E4B134ACB08A7E.idx  topbar.h.5F243E2A0A7FC0C0.idx
src/: application.cpp  application.h  flow.cpp  flow.h  lcddisplay.cpp  lcddisplay.h  main.cpp  mainwindow.cpp  mainwindow.h  mediaplayer.cpp  mediaplayer.h  resources.qrc  sidebar.cpp  sidebar.h  topbar.cpp  topbar.h
src/dialogs/: SynOS Apps.code-workspace  aboutInfo.cpp  aboutInfo.h  filepicker.cpp  filepicker.h
src/gfx/: color.cpp  color.h  fx.cpp  fx.h  test.txt
src/gfx/icons/: syndromatic_logo.png:Zone.Identifier
src/models/: track.h  trackmodel.cpp  trackmodel.h
src/services/: scanner.cpp  scanner.h
src/ui/: atmo_style.cpp  atmo_style.h  nse_uno.cpp  nse_uno.h
src/visualizer/: visualizerbridge.cpp  visualizerbridge.h
